--- a/app/views/tutorials/index.html.erb
+++ b/app/views/tutorials/index.html.erb
@@ -1,6 +1,6 @@
 <div class="ui sixteen wide mobile twelve wide tablet eight wide computer column">
   <% if admin_signed_in? %>
-      <%= link_to 'فیلم آموزشی', new_tutorial_path ,:class => 'ui button green button' %>
+      <%= link_to 'فیلم آموزشی جدید', new_tutorial_path ,:class => 'ui button green button' %>
   <% end %>
   <div class="ui fluid green card">
     <div class="content">
