--- a/app/assets/stylesheets/semantic.rtl.css.erb
+++ b/app/assets/stylesheets/semantic.rtl.css.erb
@@ -8,7 +8,31 @@
  * http://opensource.org/licenses/MIT
  *
  */
-@import url('https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin');
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Lato Regular'), local('Lato-Regular'), url("lato_regular.woff2") format('woff2');
+}
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Lato Bold'), local('Lato-Bold'), url("lato_bold.woff2") format('woff2');
+}
+@font-face {
+  font-family: 'Lato';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Lato Italic'), local('Lato-Italic'), url("lato_italic.woff2") format('woff2');
+}
+@font-face {
+  font-family: 'Lato';
+  font-style: italic;
+  font-weight: 700;
+  src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url("lato_bitalic.woff2") format('woff2');
+}
+
 /*!
  * # Semantic UI x.x - Reset
  * http://github.com/semantic-org/semantic-ui/
