--- a/app/views/medals/_medal_card.html.erb
+++ b/app/views/medals/_medal_card.html.erb
@@ -1,5 +1,5 @@
 
-<div class=" ui special link card " id="wrapper">
+<div class=" ui special link card scard" id="wrapper"  data-id="<%= medal.id %>">
 
   <div class="blurring dimmable image">
     <div class="ui dimmer">
