--- a/app/views/medals/index.html.erb
+++ b/app/views/medals/index.html.erb
@@ -1,7 +1,11 @@
 <div class="ui sixteen wide mobile twelve wide tablet eight wide computer column">
+
   <% if admin_signed_in? %>
       <%= link_to 'مدال جدید', new_medal_path ,:class => 'ui button green button' %>
   <% end %>
+  <div class="ui pagination gray message" id="infinite-scrolling ">
+    <%= will_paginate %>
+  </div>
   <div class="ui fluid green card">
     <div class="content">
       <div class="header">
@@ -15,10 +19,14 @@
       </p>
     </div>
   </div>
-  <div class="ui three cards link">
+  <div class="ui three cards link grid <%= medsort()%> ">
     <% @medals.each do |medal| %>
         <%= render 'medal_card', :medal => medal %>
     <% end %>
+  </div>
+  <br>
+  <div class="ui pagination gray message" id="infinite-scrolling ">
+    <%= will_paginate  %>
   </div>
   <!--<td>< %= link_to 'Show', medal %></td>-->
   <!--<td>< %= link_to 'Edit', edit_medal_path(medal) %></td>-->
