--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -25,7 +25,7 @@
               </td>
               <td><%= post.created_at.to_jalali.strftime("%A %d %B %Y")  %></td>
               <td><%= post.show %></td>
-              <td><%= post.title %></td>ope
+              <td><%= post.title %></td>
             </tr>
         <% end %>
         </tbody>
