--- a/app/views/tutorials/_video_card.html.erb
+++ b/app/views/tutorials/_video_card.html.erb
@@ -4,7 +4,7 @@
       <%= link_to tutorial.title ,tutorial_path(tutorial)%>
     </div>
   </div>
-  <div class="content">
+  <div class="content" style="direction: rtl;text-align:right;">
     <div class="ui meta">
       <%= tutorial.description%>
     </div>
